@@ -1,3 +1,8 @@
+Thu Sep 18 17:52:37 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Fix tab reordering, and add the close button
+	  code that was commented out (i.e. make it work)
+
 Wed Sep 17 00:08:16 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: fix some typos, thanks to Wolfgang Stoeggl
